<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="unofficial_companion" translatable="false">Unofficial Companion</string>
    <string name="adriel_cafe" translatable="false">Adriel Café</string>
    <string name="android_developer" translatable="false">Android Developer</string>
    <string name="adrielcafe_greenhellcompanionapp" translatable="false">adrielcafe/GreenHellCompanionApp</string>

    <string name="hi_there_are_you_enjoying_the_app">Hi there! Are you enjoying the app? I hope so 😊\n\nIf you have any question, suggestion or want to contribute (new content, found a bug, translation…) please contact me using the links below.</string>
    <string name="this_app_is_open_source">This app is open source, contributions are very welcome!</string>
    <string name="location_name">Location name</string>
    <string name="locations">Locations</string>
    <string name="crafting">Crafting</string>
    <string name="map">Map</string>
    <string name="save">Save</string>
    <string name="location_deleted">Location deleted</string>
    <string name="undo">Undo</string>
    <string name="give_name_your_location">༼ つ ◕_◕ ༽つ Give a name for your location</string>
    <string name="name_too_long">¯\\_(ツ)_/¯ This name is tooooo long</string>
    <string name="no_location_found">No location found</string>
    <string name="no_recipe_found">No recipe found</string>
    <string name="campsite">Campsite</string>
    <string name="food">Food</string>
    <string name="medicine">Medicine</string>
    <string name="shelter">Shelter</string>
    <string name="tool">Tool</string>
    <string name="trap">Trap</string>
    <string name="weapon">Weapon</string>
    <string name="my_locations">My Locations</string>
    <string name="blueprints">Blueprints</string>
    <string name="unique_items">Unique Items</string>
    <string name="cave">Cave</string>
    <string name="water">Water</string>
    <string name="other">Other</string>
    <string name="unofficial_map_created_by">Unofficial map created by <a href="https://www.reddit.com/r/GreenHell/comments/9es7pc/map_colored_green_hell_poi_info/">/u/Zovya</a></string>
    <string name="update_available">Update Available</string>
    <string name="new_version_available_update_now">A new version is available. Do you want to update now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="open_menu">Open menu</string>
    <string name="close_menu">Close menu</string>
    <string name="about">About</string>
    <string name="buy_me_coffee">Buy Me A Coffee</string>
    <string name="share">Share</string>
    <string name="rate_review">Rate &amp; Review</string>
    <string name="you_should_try">You should try Green Hell - Unofficial Companion, this app will help you survive in the Amazonian rainforest!</string>
    <string name="thanks_for_support">Thank you for your support! ☕ 😋</string>
    <string name="later">Later</string>
    <string name="donate">Donate</string>
    <string name="something_went_wrong">Oops! Something went wrong</string>
    <string name="app_content_free">This app and all its content are free.\nIf you\'re enjoying and want to support the development, feel free to buy me a ☕.</string>

</resources>